--- a/QuanLyThuVien/DACK-PTTKPM/_qldocgia/PageDSDocGia.xaml
+++ b/QuanLyThuVien/DACK-PTTKPM/_qldocgia/PageDSDocGia.xaml
@@ -5,10 +5,79 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:DACK_PTTKPM"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="500" d:DesignWidth="800"
       Title="DocGia">
 
     <Grid>
-        <TextBlock Text="DanhSachDocGia" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="#FFECF2F9" Offset="0"/>
+                <GradientStop Color="White" Offset="1"/>
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40" />
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="400" />
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Label Content="Danh sách Độc giả" FontSize="20" FontWeight="bold" Foreground="Red"
+            HorizontalAlignment="center" Grid.ColumnSpan="2" />
+
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="180" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Border Grid.Row="0" BorderThickness="0 2 2 0" BorderBrush="#B9C9DA">
+                <StackPanel Orientation="Vertical" Margin="20, 10, 20, 10">
+                    <Label Content="Tìm kiếm theo mã độc giả" FontWeight="Bold" />
+                    <TextBox x:Name="tb_TimKiemMaDocGia" Text="Nhập mã độc giả tìm kiếm" Margin="20,5,0,0"/>
+                    <Label Content="Tìm kiếm theo họ tên độc giả"  Margin="0,15,0,0" FontWeight="bold" />
+                    <TextBox x:Name="tb_TimKiemTenDocGia" Text="Nhập họ tên độc giả tìm kiếm" Margin="20,5,0,0" />
+                    <Button x:Name="btn_TimKiemDocGia" Content="Tìm kiếm" Height="25" Margin="40,10,40,0"></Button>
+                </StackPanel>
+            </Border>
+            <Border Grid.Row="1" BorderThickness="0 1 2 0" BorderBrush="#B9C9DA">
+                <ScrollViewer>
+                    <StackPanel Orientation="Vertical"  Margin="20, 0, 20, 10">
+                        <Label Content="Thông tin sách" HorizontalAlignment="Center" FontSize="14" FontWeight="Bold" Foreground="Red"/>
+                        <StackPanel Height="25" Orientation="Horizontal">
+                            <Label Content="Mã độc giả:" FontWeight="Bold" Foreground="Red" Width="120" />
+                            <Label x:Name="lb_KQTK_MaDocGia" Content="" FontWeight="Bold" />
+                        </StackPanel>
+                        <StackPanel Height="25" Orientation="Horizontal" Margin="0,5,0,0">
+                            <Label Content="Họ tên độc giả:" FontWeight="Bold" Foreground="Red" Width="120" />
+                            <Label x:Name="lb_KQTK_HoTenDocgia" Content="" FontWeight="Bold" />
+                        </StackPanel>
+                        <StackPanel Height="25" Orientation="Horizontal" Margin="0,5,0,0">
+                            <Label Content="Ngày sinh:" FontWeight="Bold" Foreground="Red" Width="120" />
+                            <Label x:Name="lb_KQTK_NgaySinh" Content="" FontWeight="Bold" />
+                        </StackPanel>
+                        <StackPanel Height="25" Orientation="Horizontal" Margin="0,5,0,0">
+                            <Label Content="Giới tính:" FontWeight="Bold" Foreground="Red" Width="120" />
+                            <Label x:Name="lb_KQTK_GioiTinh" Content="" FontWeight="Bold" />
+                        </StackPanel>
+                    </StackPanel>
+                </ScrollViewer>
+            </Border>
+        </Grid>
+        <Border Grid.Row="1" Grid.Column="1" BorderThickness="0 2 0 0" BorderBrush="#B9C9DA" >
+            <DataGrid x:Name="dataGridDocGia"
+                      SelectionMode="Single" 
+                      ScrollViewer.CanContentScroll="True" 
+                      ScrollViewer.HorizontalScrollBarVisibility="Auto" 
+                      ScrollViewer.VerticalScrollBarVisibility="Auto">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Mã độc giả" Width="80"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Họ tên độc giả" Width="200"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Ngày sinh" Width="200"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Giới tính" Width="200"></DataGridTextColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+        </Border>
     </Grid>
 </Page>
