--- a/QuanLyThuVien/DACK-PTTKPM/_qldanhmucsach/PageDSLoaiSach.xaml
+++ b/QuanLyThuVien/DACK-PTTKPM/_qldanhmucsach/PageDSLoaiSach.xaml
@@ -1,65 +1,127 @@
-﻿<Page x:Class="DACK_PTTKPM.PageDSLoaiSach"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:DACK_PTTKPM"
-      mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="600"
-      Title="LoaiSach">
+﻿<Page
+    x:Class="DACK_PTTKPM.PageDSLoaiSach"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:DACK_PTTKPM"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="LoaiSach"
+    d:DesignHeight="300"
+    d:DesignWidth="600"
+    Loaded="Page_Loaded"
+    mc:Ignorable="d">
 
     <Grid>
         <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="#FFECF2F9" Offset="0"/>
-                <GradientStop Color="White" Offset="1"/>
+            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                <GradientStop Offset="0" Color="#FFECF2F9" />
+                <GradientStop Offset="1" Color="White" />
             </LinearGradientBrush>
         </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="40" />
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="400" />
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <Label Content="Danh sách loại sách" FontSize="20" FontWeight="bold" Foreground="Red"
-            HorizontalAlignment="center" Grid.ColumnSpan="2" />
+        <Label
+            Grid.ColumnSpan="2"
+            HorizontalAlignment="center"
+            Content="Danh sách loại sách"
+            FontSize="20"
+            FontWeight="bold"
+            Foreground="Red" />
 
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="180" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <Border Grid.Row="0" BorderThickness="0 2 2 0" BorderBrush="#B9C9DA">
-                <StackPanel Orientation="Vertical" Margin="20, 10, 20, 10">
+            <Border
+                Grid.Row="0"
+                BorderBrush="#B9C9DA"
+                BorderThickness="0,2,2,0">
+                <StackPanel Margin="20,10,20,10" Orientation="Vertical">
                     <Label Content="Tìm kiếm theo mã loại" FontWeight="Bold" />
-                    <TextBox x:Name="tb_TimKiemMaLoaiSach" Text="Nhập mã tìm kiếm" Margin="20,5,0,0"/>
-                    <Label Content="Tìm kiếm theo tên loại"  Margin="0,15,0,0" FontWeight="bold" />
-                    <TextBox x:Name="tb_TimKiemTenLoaiSach" Text="Nhập tên loại sách tìm kiếm" Margin="20,5,0,0" />
-                    <Button x:Name="btn_TimKiemLoaiSach" Content="Tìm kiếm" Height="25" Margin="40,10,40,0"></Button>
+                    <TextBox
+                        x:Name="tb_TimKiemMaLoaiSach"
+                        Margin="20,5,0,0"
+                        Text="Nhập mã tìm kiếm" />
+                    <Label
+                        Margin="0,15,0,0"
+                        Content="Tìm kiếm theo tên loại"
+                        FontWeight="bold" />
+                    <TextBox
+                        x:Name="tb_TimKiemTenLoaiSach"
+                        Margin="20,5,0,0"
+                        Text="Nhập tên loại sách tìm kiếm" />
+                    <Button
+                        x:Name="btn_TimKiemLoaiSach"
+                        Height="25"
+                        Margin="40,10,40,0"
+                        Content="Tìm kiếm" />
                 </StackPanel>
             </Border>
-            <Border Grid.Row="1" BorderThickness="0 1 2 0" BorderBrush="#B9C9DA">
-                <StackPanel Orientation="Vertical"  Margin="20, 0, 20, 10">
-                    <Label Content="Thông tin loại sách" HorizontalAlignment="Center" FontSize="14" FontWeight="Bold" Foreground="Red"/>
+            <Border
+                Grid.Row="1"
+                BorderBrush="#B9C9DA"
+                BorderThickness="0,1,2,0">
+                <StackPanel Margin="20,0,20,10" Orientation="Vertical">
+                    <Label
+                        HorizontalAlignment="Center"
+                        Content="Thông tin loại sách"
+                        FontSize="14"
+                        FontWeight="Bold"
+                        Foreground="Red" />
                     <StackPanel Height="25" Orientation="Horizontal">
-                        <Label Content="Mã loại sách:" FontWeight="Bold" Foreground="Red" Width="100" />
-                        <Label x:Name="lb_KQTK_MaLoaiSach" Content="" FontWeight="Bold" />
+                        <Label
+                            Width="100"
+                            Content="Mã loại sách:"
+                            FontWeight="Bold"
+                            Foreground="Red" />
+                        <Label
+                            x:Name="lb_KQTK_MaLoaiSach"
+                            Content=""
+                            FontWeight="Bold" />
                     </StackPanel>
-                    <StackPanel Height="25" Orientation="Horizontal" Margin="0,5,0,0">
-                        <Label Content="Tên loại sách:" FontWeight="Bold" Foreground="Red" Width="100" />
-                        <Label x:Name="lb_KQTK_TenLoaiSach" Content="" FontWeight="Bold" />
+                    <StackPanel
+                        Height="25"
+                        Margin="0,5,0,0"
+                        Orientation="Horizontal">
+                        <Label
+                            Width="100"
+                            Content="Tên loại sách:"
+                            FontWeight="Bold"
+                            Foreground="Red" />
+                        <Label
+                            x:Name="lb_KQTK_TenLoaiSach"
+                            Content=""
+                            FontWeight="Bold" />
                     </StackPanel>
                 </StackPanel>
             </Border>
         </Grid>
-        <Border Grid.Row="1" Grid.Column="1" BorderThickness="0 2 0 0" BorderBrush="#B9C9DA" >
-            <DataGrid x:Name="dataGridLoaiSach">
+        <Border
+            Grid.Row="1"
+            Grid.Column="1"
+            BorderBrush="#B9C9DA"
+            BorderThickness="0,2,0,0">
+            <DataGrid
+                x:Name="dataGridLoaiSach"
+                AutoGenerateColumns="False"
+                IsReadOnly="True">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Mã loại sách" Width="150"></DataGridTextColumn>
-                    <DataGridTextColumn Header="Tên loại sách" Width="*"></DataGridTextColumn>
+                    <DataGridTextColumn
+                        Width="150"
+                        Binding="{Binding pid}"
+                        Header="Mã loại sách" />
+                    <DataGridTextColumn
+                        Width="*"
+                        Binding="{Binding Ten}"
+                        Header="Tên loại sách" />
                 </DataGrid.Columns>
             </DataGrid>
         </Border>
