--- a/QuanLyThuVien/DACK-PTTKPM/_qldanhmucsach/WindowSuaLoaiSach.xaml
+++ b/QuanLyThuVien/DACK-PTTKPM/_qldanhmucsach/WindowSuaLoaiSach.xaml
@@ -1,41 +1,98 @@
-﻿<Window x:Class="DACK_PTTKPM.WindowSuaLoaiSach"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DACK_PTTKPM"
-        mc:Ignorable="d"
-        Title="Sửa thông tin loại sách" Height="250" Width="400"
-        ResizeMode="NoResize"
-        WindowStartupLocation="CenterScreen">
+﻿<Window
+    x:Class="DACK_PTTKPM.WindowSuaLoaiSach"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:DACK_PTTKPM"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Sửa thông tin loại sách"
+    Width="400"
+    Height="250"
+    Loaded="Window_Loaded"
+    ResizeMode="NoResize"
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d">
     <Grid>
         <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="#FFECF2F9" Offset="0"/>
-                <GradientStop Color="White" Offset="1"/>
+            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                <GradientStop Offset="0" Color="#FFECF2F9" />
+                <GradientStop Offset="1" Color="White" />
             </LinearGradientBrush>
         </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="40" />
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="*" />
             <RowDefinition Height="60" />
         </Grid.RowDefinitions>
 
-        <Label Content="Sửa thông tin loại sách" FontSize="20" FontWeight="bold" Foreground="Red"
-            HorizontalAlignment="center" />
-        <Border Grid.Row="1" BorderThickness="0 2 0 2" BorderBrush="#B9C9DA" Padding="20, 0, 20, 0" >
-            <StackPanel Orientation="Vertical" VerticalAlignment="Center">
+        <Label
+            HorizontalAlignment="center"
+            Content="Sửa thông tin loại sách"
+            FontSize="20"
+            FontWeight="bold"
+            Foreground="Red" />
+        <Border
+            Grid.Row="1"
+            Padding="20,0,20,0"
+            BorderBrush="#B9C9DA"
+            BorderThickness="0,2,0,2">
+            <StackPanel VerticalAlignment="Center" Orientation="Vertical">
                 <StackPanel Orientation="Horizontal">
-                    <Label Content="Mã loại sách:" Width="100" FontWeight="Bold" Margin="10,0,0,0"/>
-                    <Label x:Name="lb_MaLoaiSach" Content="" FontWeight="Bold" Margin="20,0,0,0"/>
+                    <Label
+                        Width="100"
+                        Margin="0,0,0,0"
+                        Content="Mã loại sách:"
+                        FontWeight="Bold" />
+                    <TextBox
+                        x:Name="tb_MaLoaiSach"
+                        Width="250"
+                        Height="22"
+                        Margin="0,0,0,0"
+                        HorizontalAlignment="Left"
+                        IsEnabled="False" />
                 </StackPanel>
-                <Label Content="Tên loại sách" Width="100" FontWeight="bold"  Margin="10,5,0,0" HorizontalAlignment="Left" />
-                <TextBox x:Name="tb_TenLoaiSach" Width="290" Height="23" Text="..." Margin="30,0,0,0" HorizontalAlignment="Left" />
+                <StackPanel Orientation="Horizontal">
+                    <Label
+                        Width="100"
+                        Margin="0,0,0,0"
+                        HorizontalAlignment="Left"
+                        Content="Tên Ngành sách"
+                        FontWeight="bold" />
+                    <TextBox
+                        x:Name="tb_TenLoaiSach"
+                        Width="250"
+                        Height="22"
+                        Margin="0,0,0,0"
+                        HorizontalAlignment="Left" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label Width="100" />
+                    <Label
+                        x:Name="lb_Loi_TenLoaiSach"
+                        Width="250"
+                        Height="26"
+                        Margin="0,0,0,0"
+                        HorizontalAlignment="Left"
+                        FontWeight="Bold"
+                        Foreground="Red" />
+                </StackPanel>
             </StackPanel>
         </Border>
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="Xác nhận" Width="100" Height="30" Click="btnXacNhanClick" />
-            <Button Content="Hủy bỏ" Width="100" Height="30" Margin="10,0,20,0" Click="btnHuyBoClick"/>
+        <StackPanel
+            Grid.Row="2"
+            HorizontalAlignment="Right"
+            Orientation="Horizontal">
+            <Button
+                Width="100"
+                Height="30"
+                Click="btnXacNhanClick"
+                Content="Xác nhận" />
+            <Button
+                Width="100"
+                Height="30"
+                Margin="10,0,20,0"
+                Click="btnHuyBoClick"
+                Content="Hủy bỏ" />
         </StackPanel>
     </Grid>
 </Window>
