--- a/QuanLyThuVien/DACK-PTTKPM/_qldanhmucsach/WindowSuaNganhSach.xaml
+++ b/QuanLyThuVien/DACK-PTTKPM/_qldanhmucsach/WindowSuaNganhSach.xaml
@@ -48,7 +48,7 @@
                         Height="22"
                         Margin="0,0,0,0"
                         HorizontalAlignment="Left"
-                        IsReadOnly="True" />
+                        IsEnabled="False" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label
