--- a/QuanLyThuVien/DACK-PTTKPM/_qldanhmucsach/WindowThemSach.xaml
+++ b/QuanLyThuVien/DACK-PTTKPM/_qldanhmucsach/WindowThemSach.xaml
@@ -1,18 +1,189 @@
-﻿<Window x:Class="DACK_PTTKPM.WindowThemSach"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DACK_PTTKPM"
-        mc:Ignorable="d"
-        Title="Thêm sách mới" Height="300" Width="300">
-    <Grid>
+﻿<Window
+    x:Class="DACK_PTTKPM.WindowThemSach"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:DACK_PTTKPM"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Thêm sách mới"
+    Width="520"
+    Height="586"
+    ResizeMode="NoResize"
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d">
+    <Grid Margin="0,0,0,0">
         <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="#FFECF2F9" Offset="0"/>
-                <GradientStop Color="White" Offset="1"/>
+            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                <GradientStop Offset="0" Color="#FFECF2F9" />
+                <GradientStop Offset="1" Color="White" />
             </LinearGradientBrush>
         </Grid.Background>
-        <Label Content="Thêm sách" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="60" />
+        </Grid.RowDefinitions>
+
+        <Label
+            HorizontalAlignment="center"
+            Content="Thêm sách mới"
+            FontSize="20"
+            FontWeight="bold"
+            Foreground="Red" />
+        <Border
+            Grid.Row="1"
+            Padding="20,0,20,0"
+            BorderBrush="#B9C9DA"
+            BorderThickness="0,2,0,2">
+            <StackPanel
+                HorizontalAlignment="Center"
+                VerticalAlignment="Top"
+                Orientation="Vertical">
+                <StackPanel Margin="0,4,0,4" Orientation="Horizontal">
+                    <Label
+                        Width="100"
+                        Margin="0,0,0,0"
+                        Content="Tên sách"
+                        FontWeight="Bold" />
+                    <TextBox
+                        x:Name="tb_TenSach"
+                        Width="300"
+                        Height="22"
+                        Margin="0,0,0,0"
+                        HorizontalAlignment="Left" />
+                </StackPanel>
+
+                <StackPanel Margin="0,4,0,4" Orientation="Horizontal">
+                    <Label
+                        Width="100"
+                        Margin="0,0,0,0"
+                        Content="Loại sách"
+                        FontWeight="Bold" />
+                    <ComboBox Width="300">
+                        <ComboBoxItem>Truyện</ComboBoxItem>
+                        <ComboBoxItem IsSelected="True">Giáo trình</ComboBoxItem>
+                        <ComboBoxItem>Bài giảng</ComboBoxItem>
+                    </ComboBox>
+                </StackPanel>
+                <StackPanel Margin="0,4,0,4" Orientation="Horizontal">
+                    <Label
+                        Width="100"
+                        Margin="0,0,0,0"
+                        Content="Ngành"
+                        FontWeight="Bold" />
+                    <ComboBox Width="300">
+                        <ComboBoxItem>Công nghệ thông tin</ComboBoxItem>
+                        <ComboBoxItem IsSelected="True">Môi trường</ComboBoxItem>
+                        <ComboBoxItem>Địa chất</ComboBoxItem>
+                    </ComboBox>
+                </StackPanel>
+                <StackPanel Margin="0,4,0,4" Orientation="Horizontal">
+                    <Label
+                        Width="100"
+                        Margin="0,0,0,0"
+                        Content="Tác giả"
+                        FontWeight="Bold" />
+                    <ComboBox Width="300">
+                        <ComboBoxItem>Conan Doyle</ComboBoxItem>
+                        <ComboBoxItem IsSelected="True">Nguyễn Du</ComboBoxItem>
+                        <ComboBoxItem>Nguyễn Trãi</ComboBoxItem>
+                    </ComboBox>
+                </StackPanel>
+                <StackPanel Margin="0,4,0,4" Orientation="Horizontal">
+                    <Label
+                        Width="100"
+                        Margin="0,0,0,0"
+                        Content="Nhà xuất bản"
+                        FontWeight="Bold" />
+                    <ComboBox Width="300">
+                        <ComboBoxItem>Kim Đồng</ComboBoxItem>
+                        <ComboBoxItem IsSelected="True">Thanh niên</ComboBoxItem>
+                        <ComboBoxItem>Bộ giáo dục và đào tạo</ComboBoxItem>
+                    </ComboBox>
+                </StackPanel>
+                <StackPanel Margin="0,4,0,4" Orientation="Horizontal">
+                    <Label
+                        Width="100"
+                        Margin="0,0,0,0"
+                        Content="Năm xuất bản"
+                        FontWeight="Bold" />
+                    <TextBox
+                        x:Name="tb_NamXuatBan"
+                        Width="50"
+                        Height="22"
+                        Margin="0,0,0,0"
+                        HorizontalAlignment="Left" />
+                </StackPanel>
+                <StackPanel Margin="0,4,0,4" Orientation="Horizontal">
+                    <Label
+                        Width="100"
+                        Margin="0,0,0,0"
+                        Content="Số lượng"
+                        FontWeight="Bold" />
+                    <TextBox
+                        x:Name="tb_SoLuong"
+                        Width="50"
+                        Height="22"
+                        Margin="0,0,0,0"
+                        HorizontalAlignment="Left" />
+                </StackPanel>
+                <StackPanel Margin="0,4,0,4" Orientation="Horizontal">
+                    <Label
+                        Width="100"
+                        Margin="0,0,0,0"
+                        Content="Mô tả"
+                        FontWeight="Bold" />
+                    <TextBox
+                        x:Name="tb_MoTa"
+                        Width="300"
+                        Height="49"
+                        Margin="0,0,0,0"
+                        HorizontalAlignment="Left"
+                        AcceptsReturn="True"
+                        TextWrapping="Wrap" />
+                </StackPanel>
+                <StackPanel Margin="0,4,0,4" Orientation="Horizontal">
+                    <Label
+                        Width="100"
+                        Margin="0,0,0,0"
+                        Content="Ảnh bìa sách"
+                        FontWeight="Bold" />
+                    <TextBox
+                        x:Name="tb_DuongDanAnhMinhHoa"
+                        Width="300"
+                        Height="22"
+                        Margin="0,0,0,0"
+                        HorizontalAlignment="Left"
+                        IsEnabled="False" />
+                    <Button
+                        x:Name="btn_ChonAnhMinhHoa"
+                        Click="btn_ChonAnhMinhHoa_Click"
+                        Width="46"
+                        Height="22"
+                        Margin="4,0,0,0"
+                        Content="Chọn" />
+                </StackPanel>
+                <Image
+                    x:Name="img_AnhMinhHoa"
+                    Height="100"
+                    Margin="10" />
+            </StackPanel>
+        </Border>
+        <StackPanel
+            Grid.Row="2"
+            HorizontalAlignment="Right"
+            Orientation="Horizontal">
+            <Button
+                x:Name="btn_XacNhan"
+                Width="100"
+                Height="30"
+                Content="Xác nhận" />
+            <Button
+                x:Name="btn_HuyBo"
+                Width="100"
+                Height="30"
+                Margin="10,0,20,0"
+                Content="Hủy bỏ" />
+        </StackPanel>
     </Grid>
 </Window>
